backend-production.yaml
apiVersion: v1
kind: Service
metadata:
  name: mern-backend
  namespace: production
  labels:
    app: mern
    tier: backend
spec:
  ports:
  - port: 5000
    targetPort: 5000
    name: backend-port
  selector:
    app: mern
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-backend
  namespace: production
spec:
  selector:
    matchLabels:
      app: mern
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: mern
        tier: backend
    spec:
      containers:
      - name: mern-backend
        image: irwankilay/backend:1
        resources:
          limits:
            memory: 200Mi
            cpu: 100m
          requests:
            memory: 80Mi
            cpu: 50m
        ports:
        - containerPort: 5000
