ingress-staging.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-staging-ingress
  namespace: staging
  annotations:
    cert-manager.io/cluster-issuer: "mern-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - staging.victormongi.fun
    secretName: mern-staging-tls
  rules:
  - host: staging.irwankilay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mern-frontend
            port:
              number: 3000
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: mern-backend
            port:
              number: 5000
